# t5-inference

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: model.h  native_tokenizer.h  tokenizer.h
models/tf_model_gen/: fingerprint.pb  saved_model.pb
models/tf_model_gen/variables/: variables.data-00000-of-00001  variables.index
models/tf_model_genftv2/: fingerprint.pb  main.cpp  saved_model.pb  tflitemodel.cpp  tflitemodel.h
models/tf_model_genftv2/variables/: variables.data-00000-of-00001  variables.index
outputs/: logits_step_1.txt
src/: main.cpp  model.cpp  native_tokenizer.cpp  test_native_tokenizer.c  tokenizer.cpp
